fixed overflow of seatme

--- a/style.scss
+++ b/style.scss
@@ -351,6 +351,7 @@ nav {
 .posts > .post {
   padding-bottom: 2em;
   border-bottom: 1px solid $darkGray;
+  overflow: hidden;
 }
 
 .posts > .post:last-child {
